--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/Theme.Vinilos"
-      tools:targetApi="31">
+      tools:targetApi="31"
+      android:textDirection="locale"
+      android:textAlignment="gravity">
     <activity
         android:name=".MainActivity"
         android:exported="true"
